# HW3_multi-agent-book-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  check_ci.py  pyproject.toml  run.ps1  run.sh  scratch_fix.py  test_fig_tool.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: .gitkeep  ci.yml  release.yml
config/: rate_limits.json  settings.json  setup.json
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  PLAN.md  PRD.md  PROJECT_STATUS.md  PROMPT_LOG.md  RESEARCH.md  RUN_INSTRUCTIONS.md  SECURITY.md  TODO.md  USER_GUIDE.md
docs/agents/: .gitkeep  README.md  citation_agent.md  editor_agent.md  fact_verification_agent.md  latex_formatter_agent.md  outline_architect_agent.md  pdf_production_agent.md  qa_agent.md  research_agent.md  reviewer_agent.md  writer_agent.md
docs/prds/: .gitkeep  PRD_api_gatekeeper.md  PRD_latex_system.md  PRD_pdf_production.md  PRD_research_pipeline.md
evaluation/experiments/: .gitkeep  run_logs.csv
evaluation/reports/: .gitkeep  ablation_study.md  baseline_comparison.md  cost_analysis.md  failure_analysis.md  runtime_analysis.md  stress_test.md
evaluation/results/: metrics.json
output/: .gitkeep  figures_report.md  manuscript.md  manuscript_edited.md  outline.md  qa_report.md  review_report.md
output/latex/: .gitkeep  body.tex  book.bcf-SAVE-ERROR  book.ist  book.lof  book.lot  book.tex  book.xdv  mas_references.bib  pdf_report.md  preamble.tex  references.bib  telemetry.tex
output/research/: sources.md  verification_report.md
scratch/latex_test/: body.tex  book.bcf  book.ist  book.lof  book.lot  book.out  book.run.xml  book.tex  book.toc  telemetry.tex  test_escape.tex  test_escape_bidi.tex  test_escape_bidi2.bcf  test_escape_bidi2.tex
scratch/test_latex/: book.bcf  book.ilg  book.ist  book.lof  book.lot  book.out  book.run.xml  book.tex  book.toc  preamble.tex  references.bib  telemetry.tex
scripts/: add_docstrings.py  add_init_docstrings.py  check_citations.py  clean_tex.py  fix_dates.py  fix_types.py  generate_graph.py  generate_report.py  offline_compile.py  validate_latex.py
sources/: vae_homework.ipynb  vae_homework_extracted.md
src/crewai_book/: __init__.py  __main__.py  version.py
src/crewai_book/agents/: __init__.py  citation_agent.py  editor_agent.py  fact_verification_agent.py  figure_agent.py  latex_agent.py  outline_agent.py  pdf_agent.py  qa_agent.py  research_agent.py  reviewer_agent.py  writer_agent.py
src/crewai_book/config/: __init__.py  agent_configs.py  agents.json  settings.py
src/crewai_book/domain/: __init__.py  entities.py  state.py
src/crewai_book/exceptions/: base.py  domain.py
src/crewai_book/latex/: __init__.py  post_processor.py  renderer.py
src/crewai_book/observability/: __init__.py  agent_tracker.py  logger.py  metrics.py
src/crewai_book/sdk/: __init__.py  aux_processor.py  base.py  latex_client.py  llm_client.py  search_client.py
src/crewai_book/services/: __init__.py  citation_service.py  content_service.py  latex_service.py  pdf_service.py  research_service.py
src/crewai_book/shared/: constants.py  gatekeeper.py  version.py
src/crewai_book/tools/: __init__.py  arxiv_tool.py  citation_validator_tool.py  fact_check_tool.py  figure_generator_tool.py  latex_compiler_tool.py  nb_extractor.py  nb_image_decoder.py  nb_latex_extractor.py  (+2 more)
tests/: __init__.py  conftest.py  test_template_render.py
tests/evaluation/: __init__.py
tests/fixtures/: tiny_notebook.ipynb
tests/integration/: __init__.py  test_pipeline_integration.py  test_post_processing_compile.py
tests/unit/: test_main.py
(+49 files in other folders)
