[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_book"]

[project]
name = "crewai-book-generator"
version = "0.1.0"
description = "Multi-agent LaTeX book/article generator powered by CrewAI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Yanal Serhan" },
]
keywords = ["crewai", "multi-agent", "latex", "book-generator", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "crewai>=0.28",
    "crewai-tools>=0.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "httpx>=0.25",
    "rich>=13.0",
    "typer>=0.9",
    "loguru>=0.7",
    "textstat>=0.7",
    "bibtexparser>=1.4",
    "arxiv>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.7",
    "pydocstyle>=6.3",
    "pre-commit>=3.5",
    "codespell>=2.2",
]

[project.scripts]
crewai-book = "crewai_book.__main__:app"

[project.urls]
Homepage = "https://github.com/yanal/crewai-book-generator"
Repository = "https://github.com/yanal/crewai-book-generator"

# ---------- Tool Configuration ----------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, no I/O",
    "integration: may use temp files",
    "e2e: full pipeline, slow",
    "benchmark: performance tests",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module (handled by __init__.py)
    "D104",  # Missing docstring in public package
    "E501",  # Line too long
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D", "E501", "E402", "F841"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["crewai_book"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "crewai_tools.*",
    "textstat.*",
    "bibtexparser.*",
    "arxiv.*",
    "loguru.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/crewai_book"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.codespell]
skip = ".git,.venv,output,*.bib"
